tls/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system # global
  # namespace: default # namespace-wide policy
spec:
  mtls:
    mode: STRICT
